# aloop

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.arm64build  Dockerfile.codegen  LICENSE  README.md  build-local.sh
.github/workflows/: build-binary-debug.yml  build-binary.yml  build-image.yml  build-lv2.yml  probe-faust2lv2.yml  probe2.yml  probe3.yml  probe4.yml  probe5.yml
.gm/: long-gap-retry-state  mutables.yml  prd.yml
.gm/memories/: mem-0c9ef758274d5c07-1002.md  mem-149baf1cd8cb8f85-341.md  mem-20400a5c86bca4b1-968.md  mem-462e8154fa6cc05a-406.md  mem-5c2009cfa9ecd513-396.md  mem-6e009d9990610abc-401.md  mem-730dacb975e5f52f-853.md  mem-8db47f15276a6e0d-586.md  mem-92168f163bd7beaa-827.md  mem-ad93a0c86bc0e440-558.md  mem-b3af9d6873379780-750.md  mem-bb6acdf93907f602-473.md  mem-fa6dd64fc6854cb2-356.md  mem-fe81e747bc3fdfcd-512.md
.wfgy/: lessons.md
ci/: README.md
config/: aloop.conf  controls.conf
docs/: ARCHITECTURE.md  BOOT.md  CLONE-PARITY.md  COMMAND-SURFACE.md  CONTROLS.md  DECISIONS.md  DEGRADED-MODES.md  FEASIBILITY.md  FLASHING.md  GLOSSARY.md  HARDWARE-TESTS.md  LINK-MESH-TESTING.md  MIGRATION-MAP.md  NETBOOT.md  PLAN.md  README.md  REMOTE-CONTROL.md  RT-TUNING.md
dsp/: aloop.dsp  effects_runtime.dsp  loop.dsp  loop_min.dsp
effects/: README.md
effects/home/faust/: README.md  bitcrush.dsp  compressor.dsp  flanger.dsp  flutter.dsp  guitar_lofi_fx.dsp  microrepeat.dsp  phaser.dsp  samplerate.dsp  tremolo.dsp  vinyl.dsp
image/: README.md  aloop-logtail.js  aloop-reboot.js  build-image.sh  build-netboot.sh  lib-boot-tree.sh  serve-netboot-win.js  serve-netboot.sh  validate-image.sh  validate-netboot.sh
image/config/: netboot-cmdline.txt  usercfg.txt
kernel/: README.md  build-rt-kernel.sh  cmdline.txt  rt-tune.sh
src/: CMakeLists.txt  README.md  main.cpp
src/compat/: musl_compat.h
src/control/: apc_grid.cpp  apc_grid.h  apc_leds.cpp  apc_leds.h  midi.cpp  midi.h  remote_control.cpp  remote_control.h  telemetry.cpp  telemetry.h
src/dsp/: PORTED-FILES.md  audio_thread.cpp  audio_thread.h  effects_bridge.cpp  effects_bridge.h
src/dsp/sampler/: sampler.h
src/host/: lv2_host.cpp  lv2_host.h
src/link/: link_bridge.cpp  link_bridge.h
src/net/: autoap.sh
src/net/config/: dnsmasq.conf  hostapd.conf  netboot-dnsmasq.conf  wpa_supplicant.conf
src/usb/: f_uac2-gadget.sh
test/hardware/: analyze-diag-gap.js  bisect-1hz-stall.js  deploy.js  midi-inject.js  package-lock.json  package.json  run-all-verifications.js  run-all.sh  ssh-run.js  test-ap-multicast.sh  test-irq-affinity.sh  test-link-glitch.sh  test-rt-jitter.sh  test-usb-latency.sh  verify-glitch-no-shift.js  verify-quantization.js
test/parity/: README.md
